# lib/api-spec/openapi.yaml
@@ -319,11 +319,14 @@ components:
           type: string
         quantity:
           type: integer
+        unit:
+          type: string
       required:
         - partId
         - partName
         - partNumber
         - quantity
+        - unit
 
     Part:
       type: object
@@ -600,6 +603,8 @@ components:
           type: number
         totalCost:
           type: number
+        unit:
+          type: string
       required:
         - partId
         - partName
@@ -607,3 +612,4 @@ components:
         - quantity
         - unitCost
         - totalCost
+        - unit
